--- a/templates/login.html
+++ b/templates/login.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="../static/parsley.js" type="text/javascript"></script>  <!--유효성 검증 js-->
     <meta charset="UTF-8">
     <title>모닥불</title>
 </head>
@@ -130,9 +131,21 @@
        <div class="contents conatainer">
            <div class="loginBox">
                <a class="logo" href="/kakao"> 모닥불 </a>
-               <div class="fromWrap"><form action="#" method="post">
-                   <input type="text" name="id" placeholder="아이디">
-                   <input type="text" name="password" placeholder="비밀번호">
+               <div class="fromWrap"><form action="#" method="post" data-parsley-validate>
+                   <input type="text" name="id" placeholder="아이디" data-parsley-errors-container="div[id='idError']" data-parsley-error-message="아이디를 입력하세요!" required>
+                    <div class="row">  <!--에러 메시지 출력-->
+                        <div class="col-md-6">
+                         <div id="idError"  style="color:#f00;">
+                         </div>
+                        </div>
+                    </div>
+                   <input type="password" name="password" placeholder="비밀번호" data-parsley-validation-threshold="1" data-parsley-errors-container="div[id='passwordError']" data-parsley-error-message="비밀번호를 입력하세요!" required>
+                   <div class="row">  <!--에러 메시지 출력-->
+                        <div class="col-md-6">
+                         <div id="passwordError"  style="color:#f00;">
+                         </div>
+                        </div>
+                   </div>
                    <input type="submit" value="로그인">
                </form>
                <button class="oauth" onclick="location.href='/google'">Google 아이디로 로그인</button>
