--- a/templates/main.html
+++ b/templates/main.html
@@ -255,7 +255,7 @@
             });
            </script>
         </div>
-        <div id="map" style="width:100%;height:350px;"></div>
+        <div id="map" style="width:100%;height:500px;margin-top:20px;"></div>
 
         <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=d8a73cfa5a833cba814b8937d2b54a0e"></script>
         <script>
