--- a/templates/kakao2db.html
+++ b/templates/kakao2db.html
@@ -2,43 +2,82 @@
 <html>
 <head>
 	<meta charset="utf-8"/>
-	<title>Kakao 지도 시작하기</title>
+	<title>모임 생성하기</title>
         <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap.min.css') }}">
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js" type="text/javascript"></script>
+    <script src="../static/parsley.js" type="text/javascript"></script>  <!--유효성 검증 js-->
+    <style>
+        #address_div {
+            display: inline-block;
+        }
+    </style>
 </head>
 <body>
     <div class="container">
         <h5 class="my-3 border-bottom pb-2">모임 생성하기</h5>
-        <form method="post" action="/kakao2db">
+        <form method="post" action="/kakao2db" data-parsley-validate>
+            <label for="address">주소</label>
              <div class="form-inline form-group" >
-                <label for="search_name">주소</label>
-                 <div class="col-sm-5">
-                <input type="text" class="form-control" name="address" id="search_name"/>
+                 <div class="col-sm-5" id="address_div">
+                    <input type="text" class="form-control" name="address" id="address" data-parsley-errors-container="div[id='addressError']" required/>
                  </div>
-                 <input type="button" class="btn btn-success" value="search" onclick="add_search()"/>
+                 <span class="input-group-btn">
+                    <input type="button" class="btn btn-success" id="search" value="search" onclick="add_search()"/>
+                 </span>
              </div>
+            <div class="row"> <!--에러 메시지 출력-->
+                <div class="col-md-6">
+                 <div id="addressError"  style="color:#f00">
+                 </div>
+                </div>
+            </div>
             <div class="mb-3">
                 <label for="title">제목</label>
                 <div class="col-sm-5">
-                <input type="text" class="form-control" name="title" id="title">
+                <input type="text" class="form-control" name="title" id="title" data-parsley-errors-container="div[id='titleError']" required>
+                </div>
+            </div>
+            <div class="row"> <!--에러 메시지 출력-->
+                <div class="col-md-6">
+                 <div id="titleError"  style="color:#f00">
+                 </div>
                 </div>
             </div>
             <div class="mb-3">
                 <label for="topic">주제</label>
                 <div class="col-sm-5">
-                <input type="text" class="form-control" name="topic" id="topic">
+                <input type="text" class="form-control" name="topic" id="topic" data-parsley-errors-container="div[id='topicError']" required>
+                </div>
+            </div>
+            <div class="row"> <!--에러 메시지 출력-->
+                <div class="col-md-6">
+                 <div id="topicError"  style="color:#f00">
+                 </div>
                 </div>
             </div>
             <div class="mb-3">
                 <label for="recruit_num">모집인원</label>
                 <div class="col-sm-5">
-                <input type="number" class="form-control" name="recruit_num" id="recruit_num">
+                <input type="number" class="form-control" name="recruit_num" id="recruit_num" data-parsley-type="number" data-parsley-errors-container="div[id='recruit_numError']" required>
+                </div>
+            </div>
+            <div class="row"> <!--에러 메시지 출력-->
+                <div class="col-md-6">
+                 <div id="recruit_numError"  style="color:#f00">
+                 </div>
                 </div>
             </div>
             <div class="mb-3">
                 <label for="contents">내용</label>
                 <div class="col-sm-5">
-                <input type="text" class="form-control" name="contents" id="contents">
+                <input type="text" class="form-control" name="contents" id="contents" data-parsley-errors-container="div[id='contentsError']" required>
+                </div>
+            </div>
+            <div class="row"> <!--에러 메시지 출력-->
+                <div class="col-md-6">
+                 <div id="contentsError"  style="color:#f00">
+                 </div>
                 </div>
             </div>
             <div>
@@ -66,7 +105,7 @@
 		//주소로 좌표를 검색합니다.
 		function add_search(){
 		    //입력된 주소값을 add_search변수에 저장한다.
-		    var add_search = document.getElementById('search_name').value;
+		    var add_search = document.getElementById('address').value;
 		    geocoder.addressSearch(add_search, function(result, status) {
                 //정삭적으로 검색이 완료됐으면
                 if(status == kakao.maps.services.Status.OK) {
