--- a/templates/main.html
+++ b/templates/main.html
@@ -169,7 +169,7 @@
                     <button style=margin-right:20px;"><a href="/login">로그인</a></button>
                {% else %}
                {% if session['profile'] %} <!-- 프로필이 있다면 -->
-                    <img src="{{session['profile']}}" width="30px"; height="30px;" style="margin-right:5px">
+                    <img src="{{session['profile']}}" width="30px"; height="30px;" style="margin-right:5px;border-radius:50%;">
                {% endif %}
                     {{session['username']}}님 반갑습니다.
                     <button style="margin-left:20px;margin-right:20px;"><a href="/logout">로그아웃</a></button>
