--- a/Modakbul_Backend-minwoo/templates/main.html
+++ b/Modakbul_Backend-minwoo/templates/main.html
@@ -7,50 +7,52 @@
     <title>모닥불</title>
 </head>
 <style>
-    html, body{
+    html, body {
         margin: 0;
         border: 0;
-        width : 100%;
+        width: 100%;
         height: 100%;
     }
 
-    .container{
+    .container {
     }
 
-    .main{
+    .main {
         margin: 0;
         border: 0;
-        width : 100%;
+        width: 100%;
         height: 100%;
     }
 
-    header{
-        top:0px;
+    header {
+        top: 0px;
         padding: 1rem 2rem;
-        z-index:10;
-        display:flex;
+        z-index: 10;
+        display: flex;
         position: relative;
         justify-content: space-between;
         align-items: center;
         background-color: white;
         border-bottom: 1px solid lightgray;
     }
-    .navbar{
+
+    .navbar {
         display: flex;
         position: relative;
     }
-    .search input{
-        height:30px;
-        margin-right:1rem;
+
+    .search input {
+        height: 30px;
+        margin-right: 1rem;
     }
 
-    .contents{
+    .contents {
         overflow: hidden;
     }
 
     .category {
         padding: 1rem;
-        display:flex;
+        display: flex;
         position: relative;
         align-items: center;
         background-color: lightblue;
@@ -64,31 +66,32 @@
         display: flex;
     }
 
-    .category form select{
-        height:30px;
+    .category form select {
+        height: 30px;
     }
 
-    .tags{
+    .tags {
         background-color: white;
-        padding:0.1rem;
+        padding: 0.1rem;
         font-size: 0.5rem;
     }
 
-    .cardContainer{
+    .cardContainer {
         position: relative;
-        display:flex;
+        display: flex;
         align-items: center;
         border: 1px solid gray;
         background-color: lightblue;
-        overflow:hidden;
+        overflow: hidden;
         padding: 1rem;
-        padding-bottom:1.5rem;
+        padding-bottom: 1.5rem;
         z-index: 5;
     }
-    .cards{
-        width:100%;
+
+    .cards {
+        width: 100%;
         position: relative;
-        display:flex;
+        display: flex;
         align-items: center;
         overflow: scroll;
         white-space: nowrap;
@@ -101,89 +104,186 @@
         display: none; /* Chrome, Safari, Opera*/
     }
 
-    .cards ul{
+    .cards ul {
         padding: 0;
         margin: 0;
     }
 
-    .card{
+    .card {
         display: inline-block;
         list-style: none;
         padding-left: 0;
-        margin-right:2px;
+        margin-right: 2px;
         border: 1px solid gray;
-        width:150px;
+        width: 150px;
         height: 200px;
-        background-color:white;
+        background-color: white;
     }
 
-    .map{
-        width:100%;
-        position:absolute;
+    .map {
+        width: 100%;
+        position: absolute;
         bottom: 0;
         overflow: hidden;
         z-index: 0;
     }
 
-    .scrollBt-right{
-        position:absolute;
-        right:0;
-        z-index:4;
+    .scrollBt-right {
+        position: absolute;
+        right: 0;
+        z-index: 4;
     }
 
-    .scrollBt-left{
-        position:absolute;
-        left:0;
-        z-index:4;
+    .scrollBt-left {
+        position: absolute;
+        left: 0;
+        z-index: 4;
     }
 
-    .hideToggle{
-        position:absolute;
-        width:100%;
-        text-align:center;
-        bottom:0;
+    .hideToggle {
+        position: absolute;
+        width: 100%;
+        text-align: center;
+        bottom: 0;
     }
 
-    .wrap {position: absolute;left: 0;bottom: 40px;width: 288px;height: 132px;margin-left: -144px;text-align: left;overflow: hidden;font-size: 12px;font-family: 'Malgun Gothic', dotum, '돋움', sans-serif;line-height: 1.5;}
-    .wrap * {padding: 0;margin: 0;}
-    .wrap .info {width: 286px;height: 120px;border-radius: 5px;border-bottom: 2px solid #ccc;border-right: 1px solid #ccc;overflow: hidden;background: #fff;}
-    .wrap .info:nth-child(1) {border: 0;box-shadow: 0px 1px 2px #888;}
-    .info .title {padding: 5px 0 0 10px;height: 30px;background: #eee;border-bottom: 1px solid #ddd;font-size: 18px;font-weight: bold;}
-    .info .close {position: absolute;top: 10px;right: 10px;color: #888;width: 17px;height: 17px;background: url('https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/overlay_close.png');}
-    .info .close:hover {cursor: pointer;}
-    .info .body {position: relative;overflow: hidden;}
-    .info .desc {position: relative;margin: 13px 0 0 90px;height: 75px;}
-    .desc .ellipsis {overflow: hidden;text-overflow: ellipsis;white-space: nowrap;}
-    .desc .jibun {font-size: 11px;color: #888;margin-top: -2px;}
-    .info .img {position: absolute;top: 6px;left: 5px;width: 73px;height: 71px;border: 1px solid #ddd;color: #888;overflow: hidden;}
-    .info:after {content: '';position: absolute;margin-left: -12px;left: 50%;bottom: 0;width: 22px;height: 12px;background: url('https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/vertex_white.png')}
-    .info .link {color: #5085BB;}
+    .wrap {
+        position: absolute;
+        left: 0;
+        bottom: 40px;
+        width: 288px;
+        height: 132px;
+        margin-left: -144px;
+        text-align: left;
+        overflow: hidden;
+        font-size: 12px;
+        font-family: 'Malgun Gothic', dotum, '돋움', sans-serif;
+        line-height: 1.5;
+    }
+
+    .wrap * {
+        padding: 0;
+        margin: 0;
+    }
+
+    .wrap .info {
+        width: 286px;
+        height: 120px;
+        border-radius: 5px;
+        border-bottom: 2px solid #ccc;
+        border-right: 1px solid #ccc;
+        overflow: hidden;
+        background: #fff;
+    }
+
+    .wrap .info:nth-child(1) {
+        border: 0;
+        box-shadow: 0px 1px 2px #888;
+    }
+
+    .info .title {
+        padding: 5px 0 0 10px;
+        height: 30px;
+        background: #eee;
+        border-bottom: 1px solid #ddd;
+        font-size: 18px;
+        font-weight: bold;
+    }
+
+    .info .close {
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        color: #888;
+        width: 17px;
+        height: 17px;
+        background: url('https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/overlay_close.png');
+    }
+
+    .info .close:hover {
+        cursor: pointer;
+    }
+
+    .info .body {
+        position: relative;
+        overflow: hidden;
+    }
+
+    .info .desc {
+        position: relative;
+        margin: 13px 0 0 90px;
+        height: 75px;
+    }
+
+    .desc .ellipsis {
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+    }
+
+    .desc .jibun {
+        font-size: 11px;
+        color: #888;
+        margin-top: -2px;
+    }
+
+    .info .img {
+        position: absolute;
+        top: 6px;
+        left: 5px;
+        width: 73px;
+        height: 71px;
+        border: 1px solid #ddd;
+        color: #888;
+        overflow: hidden;
+    }
+
+    .info:after {
+        content: '';
+        position: absolute;
+        margin-left: -12px;
+        left: 50%;
+        bottom: 0;
+        width: 22px;
+        height: 12px;
+        background: url('https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/vertex_white.png')
+    }
+
+    .info .link {
+        color: #5085BB;
+    }
 
 </style>
 <body>
-   <div class="main container">
-       <header class="container">
-           <a class="logo" href="/"> 모닥불 </a>
-           <nav class="navbar">
-               {% if not session['userid'] %}
-                    <button style=margin-right:20px;"><a href="/login">로그인</a></button>
-               {% else %}
-               {% if session['profile'] %} <!-- 프로필이 있다면 -->
-                    <img src="{{session['profile']}}" width="30px"; height="30px;" style="margin-right:5px;border-radius:50%;">
-               {% endif %}
-                    {{session['username']}}님 반갑습니다.
-                    <button style="margin-left:20px;margin-right:20px;"><a href="/logout">로그아웃</a></button>
-               {% endif %}
-               <div class="search"><form action="#" method="post">
-                   <input type="text" name="keyword" placeholder="검색">
-                   <input type="submit" value="src">
-               </form></div>
-               <button class="mypage"><a href="/mypage">mypage</a></button>
-           </nav>
-        </header>
-       <div class="contents conatainer">
-           <div class="category"> <form action="#" method="post">
-               <!-- 디자인 하려면 button->li로 넣어야 할듯 -->
+<p style="display: none" id="user_name1">{{ session['username'] }}</p>
+<p style="display: none" id="user_id1">{{ session['userid'] }}</p>
+<div class="main container">
+    <header class="container">
+        <a class="logo" href="/"> 모닥불 </a>
+        <nav class="navbar">
+            {% if not session['userid'] %}
+                <button style=margin-right:20px;"><a href="/login">로그인</a></button>
+            {% else %}
+                {% if session['profile'] %} <!-- 프로필이 있다면 -->
+                    <img src="{{ session['profile'] }}" width="30px" ; height="30px;"
+                         style="margin-right:5px;border-radius:50%;">
+                {% endif %}
+                {{ session['username'] }}님 반갑습니다.
+                <button style="margin-left:20px;margin-right:20px;"><a href="/logout">로그아웃</a></button>
+            {% endif %}
+            <div class="search">
+                <form action="#" method="post">
+                    <input type="text" name="keyword" placeholder="검색">
+                    <input type="submit" value="src">
+                </form>
+            </div>
+            <button class="mypage"><a href="/mypage">mypage</a></button>
+        </nav>
+    </header>
+    <div class="contents conatainer">
+        <div class="category">
+            <form action="#" method="post">
+                <!-- 디자인 하려면 button->li로 넣어야 할듯 -->
                 <select name="location" id="loc">
                     <optgroup label="도시명"></optgroup>
                     <option value="지역명">지역명</option>
@@ -195,15 +295,20 @@
                 <select name="headcount" id="head">
                     <option value="">여기는 직접입력으로(생긴건 드롭다운처럼)</option>
                 </select>
-           </form>
-           <div class="tags"> <ul><li>태그 1</li><li>태그 2</li></ul> </div>
-             </div>
+            </form>
+            <div class="tags">
+                <ul>
+                    <li>태그 1</li>
+                    <li>태그 2</li>
+                </ul>
+            </div>
+        </div>
 
-           <script>
-               //마우스 가로 스크롤 이벤트
-            $(function() {
+        <script>
+            //마우스 가로 스크롤 이벤트
+            $(function () {
 
-                $(".cards").mousewheel(function(event, delta) {
+                $(".cards").mousewheel(function (event, delta) {
 
                     this.scrollLeft -= (delta * 30);
 
@@ -213,64 +318,43 @@
 
             });
 
-           </script>
-           <div class="cardContainer">
+        </script>
+        <div class="cardContainer">
 
-           <div class="cards">
-               <ul>
-               <li class="card">
-                   카드정보
-               </li>
-                <li class="card">
-                   카드정보
-               </li>
-                <li class="card">
-                   카드정보
-               </li>
-                <li class="card">
-                   카드정보
-               </li>
-               <li class="card">
-                   카드정보
-               </li>
-                <li class="card">
-                   카드정보
-               </li>
-                <li class="card">
-                   카드정보
-               </li>
-                <li class="card">
-                   카드정보
-               </li>
-           </ul>
-           </div>
-               <div class="scrollBt-left">왼쪽버튼</div>
-               <div class="scrollBt-right">오른쪽버튼</div>
-               <div class="hideToggle"><a> 숨기기 </a></div>
-           <script>
-           //스크롤 버튼
-                $(".scrollBt-right").click(function(){
-                $(".cards").animate({scrollLeft:"+=500"},800);
-            });
-            $(".scrollBt-left").click(function(){
-                $(".cards").animate({scrollLeft:"-=500"},800);
-            });
+            <div class="cards">
+                <ul id="card_list">
 
-            //숨기기 토글
-            //숨기기 클릭 - 카드 컨테이너 위쪽으로 밀려 올라감 (밑면이 top0이 되게)
-            $(".hideToggle a").click(function(){
-                $(".cardContainer").animate({height:"0"},500);
 
-            });
-           </script>
+                </ul>
+            </div>
+            <div class="scrollBt-left">왼쪽버튼</div>
+            <div class="scrollBt-right">오른쪽버튼</div>
+            <div class="hideToggle"><a> 숨기기 </a></div>
+            <script>
+                //스크롤 버튼
+                $(".scrollBt-right").click(function () {
+                    $(".cards").animate({scrollLeft: "+=500"}, 800);
+                });
+                $(".scrollBt-left").click(function () {
+                    $(".cards").animate({scrollLeft: "-=500"}, 800);
+                });
+
+                //숨기기 토글
+                //숨기기 클릭 - 카드 컨테이너 위쪽으로 밀려 올라감 (밑면이 top0이 되게)
+                $(".hideToggle a").click(function () {
+                    $(".cardContainer").animate({height: "0"}, 500);
+
+                });
+            </script>
         </div>
         <div id="map" style="width:100%;height:500px;margin-top:20px;"></div>
 
-        <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=d8a73cfa5a833cba814b8937d2b54a0e"></script>
+        <script type="text/javascript"
+                src="//dapi.kakao.com/v2/maps/sdk.js?appkey=d8a73cfa5a833cba814b8937d2b54a0e"></script>
         <script>
             var mapContainer = document.getElementById('map'),
                 mapOption = {
-                    center: new kakao.maps.LatLng(37.5826052,127.0101245), // 지도의 중심좌표
+                    center: new kakao.maps.LatLng(37.5826052, 127.0101245), // 지도의 중심좌표
                     level: 5 // 지도의 확대 레벨
                 };
 
@@ -279,33 +363,33 @@
             // 커스텀 오버레이에 표시할 내용입니다
             // HTML 문자열 또는 Dom Element 입니다
             var positions = []
-              {% for i in data %}
+            {% for i in data %}
                 positions.push(
-                {
-                    title: '<div class="wrap">' +
-                    '    <div class="info">' +
-                    '        <div class="title">' +
-                    '            {{i.title}}' +
-                    '        </div>' +
-                    '        <div class="body">' +
-                    '            <div class="img">' +
-                    '                <img src="../static/study.jpg" width="73" height="70">' +
-                    '           </div>' +
-                    '            <div class="desc">' +
-                    '                <div class="ellipsis">{{i.topic}}</div>' +
-                    '                <div class="jibun ellipsis">{{i.recruit_num}}명 모집합니다.</div>' +
-                    '                <div class="jibun ellipsis">{{i.contents}}</div>' +
-                    '                <div class="jibun ellipsis">{{i.address}}</div>' +
-                    '            </div>' +
-                    '        </div>' +
-                    '    </div>' +
-                    '</div>',
-                    latlng: new kakao.maps.LatLng({{i.lat}}, {{i.lng}})
-                });
-              {% endfor %}
+                    {
+                        title: '<div class="wrap">' +
+                            '    <div class="info">' +
+                            '        <div class="title">' +
+                            '            {{i.title}}' +
+                            '        </div>' +
+                            '        <div class="body">' +
+                            '            <div class="img">' +
+                            '                <img src="../static/study.jpg" width="73" height="70">' +
+                            '           </div>' +
+                            '            <div class="desc">' +
+                            '                <div class="ellipsis">{{i.topic}}</div>' +
+                            '                <div class="jibun ellipsis">{{i.recruit_num}}명 모집합니다.</div>' +
+                            '                <div class="jibun ellipsis">{{i.contents}}</div>' +
+                            '                <div class="jibun ellipsis">{{i.address}}</div>' +
+                            '            </div>' +
+                            '        </div>' +
+                            '    </div>' +
+                            '</div>',
+                        latlng: new kakao.maps.LatLng({{i.lat}}, {{i.lng}})
+                    });
+            {% endfor %}
 
             //displayMarker 함수를 호출해 positions 배열에 저장 된 마커들을 지도에 표시한다.
-            for(let i=0; i < positions.length; i++){
+            for (let i = 0; i < positions.length; i++) {
                 var data = positions[i];
                 displayMarker(data);
             }
@@ -325,27 +409,53 @@
 
                 //오버레이 내용 설정
                 var content = document.createElement('div');
-                content.innerHTML =  data.title;
+                content.innerHTML = data.title;
 
                 overlay.setContent(content);
 
                 //마커를 클릭하면 오버레이가 나타나고 마커가 지도의 중심으로 이동한다.
-                kakao.maps.event.addListener(marker, 'click', function() {
+                kakao.maps.event.addListener(marker, 'click', function () {
                     var latlng = marker.getPosition();
                     map.setCenter(latlng);
                     overlay.setMap(map);
                 });
 
                 //마커를 우클릭하면 오버레이가 사라진다.
-                kakao.maps.event.addListener(marker, 'rightclick', function() {
+                kakao.maps.event.addListener(marker, 'rightclick', function () {
                     overlay.setMap(null);
                 });
             }
         </script>
-       <div class="footer conatainer">
-           <!--팀원이나 간단한 정보들적기, 높이 낮아지면 사라짐-->
+        <div class="footer conatainer">
+            <!--팀원이나 간단한 정보들적기, 높이 낮아지면 사라짐-->
         </div>
-       </div>
-   </div>
+    </div>
+</div>
 </body>
+<script>
+    // 모임 목록 조회
+    function meeting_read() {
+        $.ajax({
+            type: "GET",
+            url: "/meeting_read",
+            data: {},
+            success: function (response) {
+                console.log(response);
+                let user_id = $("#user_id1").html();
+                for (let i = 0; i < response.length; i++) {
+                    if (response[i].leader_id != user_id) {
+                        document.getElementById('card_list').innerHTML += "<li class='card'>" + "태그 : " + response[i].tag_id +
+                            "<br>" + "인원 수 : " + response[i].members_id + "<br>" + "분류 : " +
+                            response[i].study_id + "<br>" + "모임장 : " + response[i].leader_name + "</li>";
+                    }
+                }
+
+
+            }
+        })
+
+    }
+    window.onload = meeting_read;
+</script>
+
 </html>
